--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,21 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong>Muevete entre las páginas</strong>
   </div>
 </ion-content>
+<ion-footer>
+  <ion-segment value="CALL" routerLink='conectado'>
+    <ion-segment-button value="Conectado" routerLink="../conectado">
+      <ion-icon name="git-network-outline"></ion-icon>      <ion-label>Conectado</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="Fotos" routerLink="../foto-historias">
+      <ion-icon name="camera-outline"></ion-icon>      <ion-label>Fotos</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+</ion-footer>
